--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,10 +1,19 @@
 body {
-  font: 13px Helvetica, Arial;
+  font: 14px Helvetica, Arial;
   color: #000;
 }
 
 a {
   color: #008ee8;
+}
+
+h1 {
+  margin-bottom: 10px;
+}
+
+p {
+  margin-bottom: 25px;
+  line-height: 1.4em;
 }
 
 .wrapper {
@@ -15,6 +24,7 @@ a {
 .header {
   height: 85px;
   border-bottom: 1px solid #030303;
+  margin-bottom: 40px
 }
 
 .cart {
